clang/test/BSC/Positive/Driver/rewrite-bsc/rewrite_bsc_with_hbs_header/b.h
#include "bsc.hbs"
#include <complex.h>

T GenericB<T>(T t) {
  return t;
}