clang/test/BSC/Negative/Driver/rewrite-bsc/rewrite_bsc_wrong_pragma_and_header/b.h
#pragma bsc

#include "bsc.h"
#include <complex.h>

T GenericB<T>(T t) {
  return t;
}